# fie-stream-clipper

./: .gitignore  README.md  build.bat  build.sh  pubspec.yaml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/fie_stream_clipper/: MainActivity.kt
assets/: video_review.exp  video_review.lib
foreign/: CMakeLists.txt  main.cpp  old.cpp
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: ffi.dart  main.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/: libvideo_review.dylib
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner/: Info.plist  MainFlutterWindow.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
test/: bun.lockb  index.ts
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: CMakeLists.txt  Runner.rc  main.cpp
windows/runner/resources/dlls/: util.lib  video_review.exp  video_review.lib
